--- a/pages/index.html
+++ b/pages/index.html
@@ -1,37 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="keywords" content="车方案">
-<meta name="description" content="车方案">
-<meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1">
-<meta name="format-detection" content="telephone=no"/> 
-<meta name="renderer" content="webkit">
-<meta name="format-detection" content="telephone=no,email=no">
-<link rel="stylesheet" href="http://g.alicdn.com/msui/sm/0.6.2/css/??sm.min.css,sm-extend.min.css">
-<link rel="stylesheet" href="../static/css/webapp.css">
-<link rel="shortcut icon" href="../static/favicon.ico" />
-<title>车方案</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="keywords" content="车方案">
+  <meta name="description" content="车方案">
+  <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1">
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="renderer" content="webkit">
+  <meta name="format-detection" content="telephone=no,email=no">
+  <link rel="stylesheet" href="http://g.alicdn.com/msui/sm/0.6.2/css/??sm.min.css,sm-extend.min.css">
+  <link rel="stylesheet" href="../static/css/webapp.css">
+  <link rel="shortcut icon" href="../static/favicon.ico" />
+  <title>车方案</title>
 </head>
+
 <body>
-<div class="l-app">
-  <div class="l-app-header"></div>
-  <div class="l-app-body">
-    
+  <div class="page-group">
+    <!-- 单个page ,第一个.page默认被展示-->
+    <div class="page">
+      <!-- 标题栏 -->
+      <header class="bar bar-nav l-bar-nav">
+        <a class="icon icon-left pull-left open-panel"></a>
+        <h1 class="title">标题</h1>
+      </header>
+      <!-- 工具栏 -->
+      <nav class="bar bar-tab l-bar-tab">
+        <a class="tab-item external active">
+          <span class="icon l-icon">&#xe64f;</span>
+          <span class="tab-label">首页</span>
+        </a>
+        <a class="tab-item external">
+          <span class="icon l-icon">&#xe622;</span>
+          <span class="tab-label">动态</span>
+        </a>
+        <a class="tab-item external">
+          <span class="icon l-icon">&#xe63f;</span>
+          <span class="tab-label">购物车</span>
+        </a>
+        <a class="tab-item external">
+          <span class="icon l-icon">&#xe666;</span>
+          <span class="tab-label">我的</span>
+        </a>
+      </nav>
+      <!-- 这里是页面内容区 -->
+      <div class="content">
+        <div class="content-block">这里是content</div>
+      </div>
+    </div>
+    <!-- 其他的单个page内联页（如果有） -->
+    <div class="page">...</div>
   </div>
-  <div class="l-app-footer">
-    
-  </div>
-</div>
-
-<script src="../static/plugs/require.min.js" data-main="../static/js/main.js"></script>
-<script>
-// requireCallback作为requirejs的回调
-function requireCallback($, utils){
-
-  console.log(utils.isFunction('ddd'))
-}
-</script>
+  <script src="../static/plugs/require.min.js" data-main="../static/js/main.js"></script>
+  <script>
+  // requireCallback作为requirejs的回调
+  function requireCallback($, utils) {
+    console.log(utils.isFunction('ddd'))
+  }
+  </script>
 </body>
+
 </html>
