--- a/pages/message.html
+++ b/pages/message.html
@@ -22,15 +22,15 @@
       <!-- 标题栏 -->
       <header class="bar bar-nav l-bar-nav">
         <a class="icon icon-left pull-left open-panel"></a>
-        <h1 class="title">首页</h1>
+        <h1 class="title">动态</h1>
       </header>
       <!-- 工具栏 -->
       <nav class="bar bar-tab l-bar-tab">
-        <a class="tab-item external active" href="index.html">
+        <a class="tab-item external" href="index.html">
           <span class="icon l-icon">&#xe64f;</span>
           <span class="tab-label">首页</span>
         </a>
-        <a class="tab-item external" href="message.html">
+        <a class="tab-item external active" href="message.html">
           <span class="icon l-icon">&#xe622;</span>
           <span class="tab-label">动态</span>
         </a>
