--- a/pages/user.html
+++ b/pages/user.html
@@ -22,11 +22,11 @@
       <!-- 标题栏 -->
       <header class="bar bar-nav l-bar-nav">
         <a class="icon icon-left pull-left open-panel"></a>
-        <h1 class="title">首页</h1>
+        <h1 class="title">个人中心</h1>
       </header>
       <!-- 工具栏 -->
       <nav class="bar bar-tab l-bar-tab">
-        <a class="tab-item external active" href="index.html">
+        <a class="tab-item external" href="index.html">
           <span class="icon l-icon">&#xe64f;</span>
           <span class="tab-label">首页</span>
         </a>
@@ -38,14 +38,24 @@
           <span class="icon l-icon">&#xe63f;</span>
           <span class="tab-label">购物车</span>
         </a>
-        <a class="tab-item external" href="user.html">
+        <a class="tab-item external active" href="user.html">
           <span class="icon l-icon">&#xe666;</span>
           <span class="tab-label">我的</span>
         </a>
       </nav>
       <!-- 这里是页面内容区 -->
       <div class="content">
-        <div class="content-block">这里是content</div>
+        <div class="l-panel-user">
+          <div class="l-panel-user-bg" style="background-image: url('../static/images/temp-001.jpg')"></div>
+          <div class="l-panel-user-bar l-flex-h">
+            <div class="l-rest">
+              
+            </div>
+            <div class="l-rest">
+              
+            </div>
+          </div>          
+        </div>
       </div>
     </div>
   </div>
