个人中心页面

--- a/pages/user-buy-records.html
+++ b/pages/user-buy-records.html
@@ -23,15 +23,20 @@
       <header class="bar bar-nav l-bar-nav">
         <a class="icon icon-left pull-left open-panel"></a>
         <a class="icon icon-refresh pull-right"></a>
-        <h1 class="title">套餐消费记录</h1>
+        <h1 class="title">消费记录</h1>
       </header>
       <!-- 这里是页面内容区 -->
       <div class="content">
-        <div class="l-taocan-name">
-          <h3>套餐名称套餐名称套餐名称</h3>
+        <div class="l-buy-total">
+          <p>累计消费 (元)</p>
+          <h3>15300.00</h3>
         </div>
         <!-- 列表 -->
-        <div class="l-card-1 l-margin">
+        <div class="l-card-1 l-margin l-buy-record">
+          <div class="l-card-hd l-flex-hc l-border-b">
+            <h3 class="l-rest">2016-12-20</h3>
+            <a href="user-buy-details.html" class="button">明细</a>
+          </div>
           <table class="l-text-table">
             <tr>
               <td>消费门店：</td>
@@ -44,21 +49,14 @@
             <tr>
               <td>消费单号：</td>
               <td>1456465454132132322</td>
-            </tr>
-            <tr>
-              <td>消费时间：</td>
-              <td>2016-05-22 16:10:26</td>
-            </tr>
-            <tr>
-              <td>使用套餐：</td>
-              <td>
-                <p>普通洗车*1</p>
-                <p>更换机油*1</p>
-              </td>
             </tr>
           </table>
         </div>
-        <div class="l-card-1 l-margin">
+        <div class="l-card-1 l-margin l-buy-record">
+          <div class="l-card-hd l-flex-hc l-border-b">
+            <h3 class="l-rest">2016-12-20</h3>
+            <a href="user-buy-details.html" class="button">明细</a>
+          </div>
           <table class="l-text-table">
             <tr>
               <td>消费门店：</td>
@@ -72,16 +70,25 @@
               <td>消费单号：</td>
               <td>1456465454132132322</td>
             </tr>
+          </table>
+        </div>
+        <div class="l-card-1 l-margin l-buy-record">
+          <div class="l-card-hd l-flex-hc l-border-b">
+            <h3 class="l-rest">2016-12-20</h3>
+            <a href="user-buy-details.html" class="button">明细</a>
+          </div>
+          <table class="l-text-table">
             <tr>
-              <td>消费时间：</td>
-              <td>2016-05-22 16:10:26</td>
+              <td>消费门店：</td>
+              <td>好的辅导员</td>
             </tr>
             <tr>
-              <td>使用套餐：</td>
-              <td>
-                <p>普通洗车*1</p>
-                <p>更换机油*1</p>
-              </td>
+              <td>消费金额：</td>
+              <td>¥50.00</td>
+            </tr>
+            <tr>
+              <td>消费单号：</td>
+              <td>1456465454132132322</td>
             </tr>
           </table>
         </div>
