--- a/pages/user-coupons.html
+++ b/pages/user-coupons.html
@@ -18,12 +18,12 @@
 <body>
   <div class="page-group">
     <!-- 单个page ,第一个.page默认被展示-->
-    <div class="page">
+    <div class="page disable-router">
       <!-- 标题栏 -->
       <header class="bar bar-nav l-bar-nav">
         <a class="icon icon-left pull-left open-panel"></a>
         <a class="icon icon-refresh pull-right"></a>
-        <h1 class="title">优惠券</h1>
+        <h1 class="title">我的优惠券</h1>
       </header>
       <!-- 这里是页面内容区 -->
       <div class="content">
@@ -33,6 +33,7 @@
         </div>
         <div class="tabs">
           <div id="tab1" class="tab active">
+            <!-- 列表 -->
             <div class="l-coupon l-flex-h">
               <div class="l-coupon-value l-flex-vhc">
                 <span><i class="l-icon">&#xe6cb;</i>500</span>
@@ -66,8 +67,10 @@
                 <p class="l-fs-s" style="margin-top:0.75rem;">有效期至2017-12-20</p>
               </div>
             </div>
+            <!-- 列表 end-->
           </div>
           <div id="tab2" class="tab">
+            <!-- 列表 -->
             <div class="l-coupon l-flex-h l-disabled">
               <div class="l-coupon-value l-flex-vhc">
                 <span><i class="l-icon">&#xe6cb;</i>500</span>
@@ -90,6 +93,7 @@
                 <p class="l-fs-s" style="margin-top:0.75rem;">有效期至2017-12-20</p>
               </div>
             </div>
+            <!-- 列表 end-->
           </div>
         </div>
       </div>
