--- a/pages/user-taocan.html
+++ b/pages/user-taocan.html
@@ -18,7 +18,7 @@
 <body>
   <div class="page-group">
     <!-- 单个page ,第一个.page默认被展示-->
-    <div class="page">
+    <div class="page disable-router">
       <!-- 标题栏 -->
       <header class="bar bar-nav l-bar-nav">
         <a class="icon icon-left pull-left open-panel"></a>
@@ -27,6 +27,7 @@
       </header>
       <!-- 这里是页面内容区 -->
       <div class="content">
+        <!-- 列表 -->
         <div class="l-taocan-item l-margin">
           <div class="l-taocan-hd">
             <h3>套餐名称套餐名称</h3>
@@ -97,6 +98,7 @@
             <a href="user-taocan-records.html" class="button button-fill pull-right l-btn-m l-margin">消费记录</a>
           </div>
         </div>
+        <!-- 列表 end-->
       </div>
     </div>
   </div>
