--- a/pages/shopcar.html
+++ b/pages/shopcar.html
@@ -18,7 +18,7 @@
 <body>
   <div class="page-group">
     <!-- 单个page ,第一个.page默认被展示-->
-    <div class="page">
+    <div class="page disable-router">
       <!-- 标题栏 -->
       <header class="bar bar-nav l-bar-nav">
         <a class="icon icon-left pull-left open-panel"></a>
