--- a/pages/user-goods-pay.html
+++ b/pages/user-goods-pay.html
@@ -22,40 +22,26 @@
       <!-- 标题栏 -->
       <header class="bar bar-nav l-bar-nav">
         <a class="icon icon-left pull-left open-panel"></a>
-        <h1 class="title">首页</h1>
+        <a class="icon icon-refresh pull-right"></a>
+        <h1 class="title">商品支付</h1>
       </header>
-      <!-- 工具栏 -->
-      <nav class="bar bar-tab l-bar-tab">
-        <a class="tab-item external active" href="index.html">
-          <span class="icon l-icon">&#xe64f;</span>
-          <span class="tab-label">首页</span>
-        </a>
-        <a class="tab-item external" href="message.html">
-          <span class="icon l-icon">&#xe622;</span>
-          <span class="tab-label">动态</span>
-        </a>
-        <a class="tab-item external" href="shopcar.html">
-          <span class="icon l-icon">&#xe63f;</span>
-          <span class="tab-label">购物车</span>
-        </a>
-        <a class="tab-item external" href="user.html">
-          <span class="icon l-icon">&#xe666;</span>
-          <span class="tab-label">我的</span>
-        </a>
-      </nav>
       <!-- 这里是页面内容区 -->
       <div class="content">
-        <div class="content-block">这里是content</div>
+        
       </div>
     </div>
   </div>
   <script src="../static/plugs/require.min.js" data-main="../static/js/main.js"></script>
   <script>
   // requireCallback作为requirejs的回调
-  function requireCallback($, utils) {
-    console.log($, utils)
+  function requireCallback($, utils, Vue) {
+    var vm = new Vue({
+      el: document.body,
+      data: {
+        
+      }
+    })
   }
   </script>
 </body>
-
 </html>
