个人中心页面

--- a/pages/store-list.html
+++ b/pages/store-list.html
@@ -25,7 +25,7 @@
         <a class="icon icon-refresh pull-right"></a>
         <h1 class="title">门店列表</h1>
       </header>
-      <footer class="l-page-footer">
+      <footer class="l-page-footer l-border-t">
         <a class="button button-fill l-btn"><i class="l-icon">&#xe640;</i>&ensp;联系客服</a>
       </footer>
       <!-- 这里是页面内容区 -->
