--- a/pages/user-goods-evaluate.html
+++ b/pages/user-goods-evaluate.html
@@ -25,7 +25,7 @@
         <a class="icon icon-refresh pull-right"></a>
         <h1 class="title">商品评价</h1>
       </header>
-      <footer class="l-page-footer">
+      <footer class="l-page-footer l-border-t">
         <a class="button button-fill l-btn" @click="submit">提交评价</a>
       </footer>
       <!-- 这里是页面内容区 -->
