--- a/pages/message.html
+++ b/pages/message.html
@@ -44,8 +44,59 @@
         </a>
       </nav>
       <!-- 这里是页面内容区 -->
-      <div class="content">
-        <div class="content-block">这里是content</div>
+      <div class="content" style="background-color: #fff;">
+        <div class="l-panel-carinfo l-bg-cover" style="background-image: url('../static/images/img-001.jpg')">
+          <div class="l-flex-hc l-margin">
+            <img class="l-thumb l-margin-r-sm" src="http://placeholdit.imgix.net/~text?txtsize=16&bg=ebebeb&txtclr=999&txt=Logo&w=64&h=64">
+            <h3>奥迪A6L 2001款</h3>
+          </div>
+          <div class="l-flex-h l-margin">
+            <div class="l-panel-carinfo-item l-rest l-flex-hc l-margin-r">
+              <img src="../static/images/img-002.png">
+              <div class="l-rest l-fs-s">
+                <p>行驶里程</p>
+                <p>50000公里</p>
+              </div>
+            </div>
+            <div class="l-panel-carinfo-item l-rest l-flex-hc">
+              <img src="../static/images/img-003.png">
+              <div class="l-rest l-fs-s">
+                <p>上路时间</p>
+                <p>2015-01-23</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="l-center l-margin-t  l-fs-l">
+          <i class="l-icon">&#xe602;</i>
+          <strong>检测报告</strong>
+        </div>
+        <div class="list-block">
+          <ul>
+            <li class="item-content">
+              <div class="item-inner">
+                <div class="item-title">仪表信息</div>
+                <div class="item-after l-text-error">异常</div>
+              </div>
+            </li>
+            <li class="item-content">
+              <div class="item-inner">
+                <div class="item-title">仪表信息</div>
+                <div class="item-after l-text-error">异常</div>
+              </div>
+            </li>
+            <li class="item-content">
+              <div class="item-inner">
+                <div class="item-title">仪表信息</div>
+                <div class="item-after l-text-error">异常</div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="l-margin">
+          <a class="button button-fill l-btn">查看明细</a>
+        </div>
       </div>
     </div>
   </div>
