--- a/pages/user-goods-evaluate.html
+++ b/pages/user-goods-evaluate.html
@@ -113,11 +113,11 @@
         },
         submit: function(){
           if(!this.formData.score){
-            utils.toptip('请选择一个评价');
+            $.toptip('请选择一个评价');
             return;
           }
           if(!this.formData.content){
-            utils.toptip('请填写评价内容');
+            $.toptip('请填写评价内容');
             return;
           }
 
