--- a/pages/user.html
+++ b/pages/user.html
@@ -142,7 +142,7 @@
       methods: {
         exit: function(){
           $.confirm('是否退出？', function(){
-            console.log('yes')
+            window.location.href = 'login.html';
           })
         }
       }
