--- a/pages/user-taocan.html
+++ b/pages/user-taocan.html
@@ -60,7 +60,7 @@
             </table>
           </div>
           <div class="l-taocan-ft">
-            <a href="user-taocan-records.html" class="button button-fill pull-right l-btn-m l-margin">消费记录</a>
+            <a href="user-taocan-records.html" class="button button-fill pull-right l-btn-s l-margin">消费记录</a>
           </div>
         </div>
         <div class="l-taocan-item l-margin">
@@ -95,7 +95,7 @@
             </table>
           </div>
           <div class="l-taocan-ft">
-            <a href="user-taocan-records.html" class="button button-fill pull-right l-btn-m l-margin">消费记录</a>
+            <a href="user-taocan-records.html" class="button button-fill pull-right l-btn-s l-margin">消费记录</a>
           </div>
         </div>
         <!-- 列表 end-->
