--- a/pages/shopcar.html
+++ b/pages/shopcar.html
@@ -36,7 +36,7 @@
         <div class="l-rest l-center">
           合计：<span class="l-text-warn"><i class="l-icon">&#xe6cb;</i>200.00</span>
         </div>
-        <a v-if="!isEdit" class="button button-fill l-btn">去结算</a>
+        <a v-if="!isEdit" class="button button-fill l-btn" href="shopcar-order.html">去结算</a>
         <a v-else class="button button-fill l-btn l-btn-error">删除</a>
       </div>
       <!-- 工具栏 -->
